Simplified the code and added a new calcStudentsAverage test